# cphonetic

./: CMakeLists.txt
csharp/: cphonetic.sln
csharp/CPhonetic/: AssemblyInfo.cs  CPhonetic.csproj  MSyl.cs  TokenDict.cs
csharp/CPhonetic/MPhonemeCombinations/: MImt.cs  MRt.cs
csharp/CPhonetic/Transliterators/: AltPinyin.cs  Bopomofo.cs  GwoRo.cs  IMTransliterator.cs  Pinyin.cs
csharp/CPhonetic/Utils/: SAlgo.cs
csharp/CPhoneticTest/: CPhoneticTest.csproj  Test.cs
mandarin/: CMakeLists.txt  altpinyin.cxx  altpinyin.h  bopomofo.cxx  bopomofo.h  gworo.cxx  gworo.h  helper.h  mandarin.cxx  mandarin.h  marked_pinyin.cxx  marked_pinyin.h  marked_pinyin_data.cxx  msound.h  pinyin.cxx  pinyin.h  pinyin_data.cxx  shortnames.h  tokendict.h  transcriptor.h  transliterator.h  transliterators.h
mandarin/tranliterators/: pinyin_data.cxx
test/: CMakeLists.txt  mandarin_test.cxx
